CREATE TABLE IF NOT EXISTS users (
    user_id  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email    VARCHAR NOT NULL UNIQUE,
    login    VARCHAR NOT NULL UNIQUE,
    name     VARCHAR,
    birthday DATE
);

CREATE TABLE IF NOT EXISTS friendships (
    user_id   BIGINT  NOT NULL,
    friend_id BIGINT  NOT NULL,
    status    VARCHAR NOT NULL,
    CONSTRAINT pk_friendships PRIMARY KEY (user_id, friend_id),
    CONSTRAINT fk_friendships_user   FOREIGN KEY (user_id)   REFERENCES users (user_id),
    CONSTRAINT fk_friendships_friend FOREIGN KEY (friend_id) REFERENCES users (user_id)
);

CREATE TABLE IF NOT EXISTS mpa_ratings (
    mpa_rating_id INT     GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name          VARCHAR NOT NULL UNIQUE
);

CREATE TABLE IF NOT EXISTS genres (
    genre_id INT     GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name     VARCHAR NOT NULL UNIQUE
);

CREATE TABLE IF NOT EXISTS films (
    film_id       BIGINT  GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name          VARCHAR NOT NULL,
    description   VARCHAR(200),
    release_date  DATE,
    duration      INT,
    mpa_rating_id INT     NOT NULL,
    CONSTRAINT fk_films_mpa FOREIGN KEY (mpa_rating_id) REFERENCES mpa_ratings (mpa_rating_id)
);

CREATE TABLE IF NOT EXISTS film_genres (
    film_id  BIGINT NOT NULL,
    genre_id INT    NOT NULL,
    CONSTRAINT pk_film_genres PRIMARY KEY (film_id, genre_id),
    CONSTRAINT fk_film_genres_film  FOREIGN KEY (film_id)  REFERENCES films  (film_id),
    CONSTRAINT fk_film_genres_genre FOREIGN KEY (genre_id) REFERENCES genres (genre_id)
);

CREATE TABLE IF NOT EXISTS likes (
    film_id BIGINT NOT NULL,
    user_id BIGINT NOT NULL,
    CONSTRAINT pk_likes PRIMARY KEY (film_id, user_id),
    CONSTRAINT fk_likes_film FOREIGN KEY (film_id) REFERENCES films (film_id),
    CONSTRAINT fk_likes_user FOREIGN KEY (user_id) REFERENCES users (user_id)
);
